<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profiletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="120px"
        app:layout_constraintBottom_toTopOf="@+id/imgprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrowimge"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/profiletxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profiletxt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/imgprofile"
        android:layout_width="170dp"
        android:layout_height="229dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="@+id/profiletxt"
        app:layout_constraintTop_toBottomOf="@+id/arrowimge"
        app:srcCompat="@drawable/girl" />

    <TextView
        android:id="@+id/emiltxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/zarapatel_gmail_com"
        android:textColor="@color/black"
        android:textSize="50px"
        app:layout_constraintBottom_toBottomOf="@+id/histry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgprofile" />

    <TextView
        android:id="@+id/histry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="@+id/imgprofile"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="@+id/profiletxt"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/h5image"
        android:layout_width="204dp"
        android:layout_height="217dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/location1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgprofile"
        app:srcCompat="@drawable/h5" />

    <TextView
        android:id="@+id/angel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/angel_resort"
        android:textColor="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emiltxt" />

    <TextView
        android:id="@+id/location1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/colombo_sri_lanka"
        app:layout_constraintBottom_toTopOf="@+id/bookedbtn"
        app:layout_constraintEnd_toEndOf="@+id/price2"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/price2" />

    <TextView
        android:id="@+id/loc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/colombo6_sri_lanka"
        app:layout_constraintBottom_toTopOf="@+id/bookedbtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/villatxt" />

    <ImageView
        android:id="@+id/placeimg"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bookedbtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="@+id/villatxt"
        app:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/imgplace"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bookedbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/angel"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="56dp"
        android:text="$500"
        android:textSize="50px"
        app:layout_constraintBottom_toBottomOf="@+id/bookedbtn"
        app:layout_constraintEnd_toStartOf="@+id/imgplace" />

    <TextView
        android:id="@+id/price5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="72dp"
        android:text="@string/_600"
        android:textSize="50px"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bookedbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#E784D3"
        android:text="@string/booked"
        app:layout_constraintBottom_toTopOf="@+id/placeimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toEndOf="@+id/price2" />

    <Button
        android:id="@+id/bookedbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#E784D3"
        android:text="@string/booked1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toEndOf="@+id/price5" />

    <ImageView
        android:id="@+id/h6"
        android:layout_width="209dp"
        android:layout_height="138dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price5"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/h6" />

    <TextView
        android:id="@+id/villatxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:text="@string/sunset_villa"
        android:textColor="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookedbtn" />

    <ImageView
        android:id="@+id/homeimgt"
        android:layout_width="41dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="36dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/heartreda"
        android:layout_width="37dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loupe" />

    <ImageView
        android:id="@+id/userimgp"
        android:layout_width="36dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>